# gabriele

./: AGENTS.md  Cargo.toml  LICENSE  README.md
docs/: README.md
gabi/: Cargo.toml  welcome.txt
gabi/src/: db_loader.rs  directive.rs  hal.rs  lib.rs  main.rs
gabi/tests/: test_printing.rs
gabi/tests/helpers/: app.rs  db.rs
gabi/wheels/: German.toml
gabriele/: Cargo.toml
gabriele/src/: cmd.rs  database.rs  hal.rs  lib.rs  machine.rs  motion.rs  position.rs  printing.rs  resolution.rs  sign.rs  symbol.rs  tcp_talker.rs  to_symbols.rs
gabriele/src/wheels/: standard.rs
src/: action.rs  cmd.rs  connection.rs  daisy.rs  database.rs  directive.rs  hal.rs  impression.rs  lib.rs  machine.rs  main.rs  motion.rs  oport.rs  position.rs  printing.rs  sign.rs  sim.rs  symbol.rs  tcp_talker.rs  times.rs  to_symbols.rs
src/action/: mod.rs  printing.rs
src/daisy/: german.rs  mod.rs
src/gabi/: commando.rs  daisy.rs  hal.rs  machine.rs  mod.rs  motion.rs  position.rs  primitives.rs  printing.rs
tcp-client/: Cargo.toml
tcp-client/src/: client.rs  lib.rs
tests/: test_app.rs  test_hal.rs  test_printing.rs
tests/helpers/: app.rs  hal.rs  mod.rs
