[package]
name = "gabriele"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gabriele"
path = "src/main.rs"

[[bin]]
name = "sim"
path = "src/sim.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.9"
itertools = "0.14.0"
log = "0.4.20"
regex = "1.11.1"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
bytes = "1.10.1"
tokio-util = "0.7.18"
