
[workspace]
resolver = "2"
members = [
    "gabi",
    "gabriele",
    "tcp-client",
]


[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Taras Struk"]
repository = "https://github.com/tarasstruk/gabriele"

[workspace.dependencies]
gabriele = {path = "gabriele"}
gabi = {path = "gabi"}
tcp-client = {path = "tcp-client"}

anyhow = "1.0.75"
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.9"
itertools = "0.14.0"
log = "0.4.20"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.41"
bytes = "1.10.1"
tokio-util = "0.7.18"
deku = { version =  "0.20.3", features = ["bits"], default-features = false}
